--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -6,9 +6,21 @@
   .three {
     background-color: pink;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 42px;
   }
 
   .five {
     background-color: pink;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .two {
+    color: blue;
+    font-size: 36px;
+  }
+
+  .four {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
   }
